--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,10 @@
 @tailwind base; @tailwind components; @tailwind utilities;
+
+
+body { zoom: 1.1; -moz-transform: scale(1.1); -moz-transform-origin: 0 0; }
+
+
+body { zoom: 1.1; -moz-transform: scale(1.1); -moz-transform-origin: 0 0; }
+
+
+body { zoom: 1.1; -moz-transform: scale(1.1); -moz-transform-origin: 0 0; }
